# Benchmarks

./: .gitignore  LICENSE  README.md
plots/: Init.py  chase_vs_elpa.py  comm_vs_compt.py  conEst.py  hhQR_vs_CholQR.py  strong_scaling.py  weak_scaling.py
scripts/ELPA_vs_ChASE/: README.md
scripts/ELPA_vs_ChASE/elpa_1_2/: build.sh
scripts/commVScompute/: README.md  data.py  query_init_v12.sh  query_init_v13.sh  query_v12.sh  query_v13.sh  write.sh
scripts/commVScompute/CPU/: build_v12.sh  submit.sh
scripts/commVScompute/ChASE-v1.2/: CMakeLists.txt
scripts/commVScompute/GPU/: build_v13.sh
scripts/commVScompute/nccl/: build.sh
scripts/commVScompute/no-nccl/: build.sh
scripts/commVScompute/v1.2.1/: build.sh  clean.sh  submit.sh
scripts/condEst/: README.md  build.sh  data.sh  submit.sh
scripts/condEst/AuAg-13k/: Opt.sh  OptN.sh
scripts/condEst/HfO2-62k/: Opt.sh  OptN.sh
scripts/condEst/HfO2-76k/: Opt.sh  OptN.sh
scripts/condEst/In2O3-115k/: Opt.sh  OptN.sh
scripts/condEst/In2O3-76k/: Opt.sh  OptN.sh
scripts/condEst/NaCl-9k/: Opt.sh  OptN.sh
scripts/condEst/TiO2-12k/: Opt.sh  OptN.sh
scripts/condEst/TiO2-29k/: Opt.sh  OptN.sh
scripts/hhQR_vs_cholQR/: README.md
scripts/hhQR_vs_cholQR/CPU/: data.sh
scripts/hhQR_vs_cholQR/GPU/: build.sh  data.sh  submit.sh
scripts/matGen/: README.md  build.sh  submit.sh
scripts/matGen/120k/: matgen.sh
scripts/matGen/130k/: matgen.sh
scripts/strong-scaling/: README.md
scripts/strong-scaling/elpa_1_2/elpa_miniapp/: CMakeLists.txt  elpa-miniapp.c
scripts/weak-scaling/: README.md
(+282 files in other folders)
